<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Jigsaw "</string>
    <string name="app_select">selection</string>
    <string name="app_game">Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="enter_game">进入游戏</string>
	<string name="ranking">排名</string>
	<string name="guide">说明</string>
	<string name="album">相册</string>
	<string name="camera">相机</string>
	<string name="returnto">返回</string>
	<string name="step">步数</string>
	<string name="timec">计时</string>
	<string name="reset">重置</string>
	<string name="raw_image">原图</string>
	<string name="restore">还原</string>
	
</resources>
