<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
	<LinearLayout
	    android:id="@+id/ly_gametop"
	    android:layout_width="match_parent"  
        android:layout_height="wrap_content"           
        android:gravity="center_horizontal" 
	    >
	    <TextView 
        	android:id="@+id/tv_stepc"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/step"
        	android:layout_gravity="center"
        	/>
    	<TextView 
        	android:id="@+id/tv_step"
        	android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
        	android:gravity="center"  
            android:paddingRight="50dip"  
            
        	/>
    	<TextView 
        	android:id="@+id/tv_timec"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/timec"
	        android:layout_gravity="center" 
	        />
	    <TextView 
	        android:id="@+id/tv_time"
	        android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_gravity="center"  
            android:gravity="center"  
            
	        />
	</LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ly_gamebottom"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignParentBottom="true"  
        android:layout_centerHorizontal="true" 
        style="?android:attr/buttonBarStyle"        
        >
	    <Button 
            android:id="@+id/bu_restore"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
            android:text="@string/restore"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button 
            android:id="@+id/bu_rawimage"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
            android:text="@string/raw_image"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button 
            android:id="@+id/bu_reset"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
            android:text="@string/reset"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button 
            android:id="@+id/bu_gameback"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
            android:text="@string/returnto"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <scut.ftt.jigsaw.MainView
        android:id="@+id/gv_game"
        android:numColumns="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/ly_gametop"
        >       
    </scut.ftt.jigsaw.MainView>
    <ImageView 
        android:id="@+id/iv_raw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gv_game"
        />
</RelativeLayout>