<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="scut.ftt.jigsaw.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/bu_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bu_rank"
        android:text="@string/enter_game" 
        android:layout_marginBottom="20dp"
        />
        
    <Button
        android:id="@+id/bu_rank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_centerInParent="true"
        android:text="@string/ranking" />

    <Button
        android:id="@+id/bu_guide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bu_rank"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/guide" />

</RelativeLayout>